--- a/generator/services/Angular-gen-ManagerV10/src/strategy/HTML/template/Label.handlebars
+++ b/generator/services/Angular-gen-ManagerV10/src/strategy/HTML/template/Label.handlebars
@@ -1,7 +1,13 @@
 <div id="{{attributes.id}}" class="{{cssClassName}}">
+{{#if components}}
 {{#each components}}
     {{#ifEquals ../type "label"}}
     <label id="{{attributes.id}}">{{content}}</label>
     {{/ifEquals}}
 {{/each}}
+{{else}}
+    {{#ifEquals type "label"}}
+    <label id="{{attributes.id}}">{{content}}</label>
+    {{/ifEquals}}
+{{/if}}
 </div>
