--- a/generator/services/Angular-gen-ManagerV10/src/strategy/HTML/template/form.handlebars
+++ b/generator/services/Angular-gen-ManagerV10/src/strategy/HTML/template/form.handlebars
@@ -1,11 +1,12 @@
-<form>{{#each components}}
+<form>{{#if components}}{{#each components}}
     <div id="{{attributes.id}}" class="{{cssClassName}}">
+    {{#if components}}
     {{#each components}}
         {{#ifEquals type "label"}}
         <label id="{{attributes.id}}" class="{{cssClass}}">{{content}}</label>
         {{/ifEquals}}
         {{#ifEquals type "input"}}
-        <input id="{{attributes.id}}" class="{{cssClass}}" {{#if attributes.entityDetails.entityName}}[(ngModel)]="{{attributes.entityDetails.entityName}}.{{attributes.entityDetails.fields.name}}" [ngModelOptions]="{standalone: true}"{{/if}} type="text">
+        <input id="{{attributes.id}}" class="{{cssClass}}" {{#if attributes.placeholder}}placeholder="{{attributes.placeholder}}"{{/if}} {{#if attributes.entityDetails.entityName}}[(ngModel)]="{{attributes.entityDetails.entityName}}.{{attributes.entityDetails.fields.name}}" [ngModelOptions]="{standalone: true}"{{/if}} type="text">
         {{/ifEquals}}
         {{#ifEquals type "checkbox"}}
         <input type="{{type}}" id="{{attributes.id}}" class="{{cssClass}}">
@@ -17,5 +18,40 @@
         <button {{#if attributes.type}}type="{{attributes.type}}"{{/if}} id="{{attributes.id}}" {{#if flowDetails.verb}}({{flowDetails.verb}})="{{flowDetails.flowName}}()"{{/if}} class="{{cssClass}}">{{content}}</button>&nbsp;&nbsp;
         {{/ifEquals}}
     {{/each}}
+    {{else}}
+        {{#ifEquals type "label"}}
+        <label id="{{attributes.id}}" class="{{cssClass}}">{{content}}</label>
+        {{/ifEquals}}
+        {{#ifEquals type "input"}}
+        <input id="{{attributes.id}}" class="{{cssClass}}" {{#if attributes.placeholder}}placeholder="{{attributes.placeholder}}"{{/if}} {{#if attributes.entityDetails.entityName}}[(ngModel)]="{{attributes.entityDetails.entityName}}.{{attributes.entityDetails.fields.name}}" [ngModelOptions]="{standalone: true}"{{/if}} type="text">
+        {{/ifEquals}}
+        {{#ifEquals type "checkbox"}}
+        <input type="{{type}}" id="{{attributes.id}}" class="{{cssClass}}">
+        {{/ifEquals}}
+        {{#ifEquals type "textarea"}}
+        <textarea type="text" id="{{attributes.id}}" class="{{cssClass}}" {{#if attributes.entityDetails.entityName}}[(ngModel)]="{{attributes.entityDetails.entityName}}.{{attributes.entityDetails.fields.name}}" [ngModelOptions]="{standalone: true}"{{/if}}></textarea>
+        {{/ifEquals}}
+        {{#ifEquals type "button"}}
+        <button {{#if attributes.type}}type="{{attributes.type}}"{{/if}} id="{{attributes.id}}" {{#if flowDetails.verb}}({{flowDetails.verb}})="{{flowDetails.flowName}}()"{{/if}} class="{{cssClass}}">{{content}}</button>&nbsp;&nbsp;
+        {{/ifEquals}}
+    {{/if}}
     </div>{{/each}}
+    {{else}}
+    <div id="{{attributes.id}}" class="{{cssClassName}}"></div>
+        {{#ifEquals type "label"}}
+        <label id="{{attributes.id}}" class="{{cssClass}}">{{content}}</label>
+        {{/ifEquals}}
+        {{#ifEquals type "input"}}
+        <input id="{{attributes.id}}" class="{{cssClass}}" {{#if attributes.placeholder}}placeholder="{{attributes.placeholder}}"{{/if}} {{#if attributes.entityDetails.entityName}}[(ngModel)]="{{attributes.entityDetails.entityName}}.{{attributes.entityDetails.fields.name}}" [ngModelOptions]="{standalone: true}"{{/if}} type="text">
+        {{/ifEquals}}
+        {{#ifEquals type "checkbox"}}
+        <input type="{{type}}" id="{{attributes.id}}" class="{{cssClass}}">
+        {{/ifEquals}}
+        {{#ifEquals type "textarea"}}
+        <textarea type="text" id="{{attributes.id}}" class="{{cssClass}}" {{#if attributes.entityDetails.entityName}}[(ngModel)]="{{attributes.entityDetails.entityName}}.{{attributes.entityDetails.fields.name}}" [ngModelOptions]="{standalone: true}"{{/if}}></textarea>
+        {{/ifEquals}}
+        {{#ifEquals type "button"}}
+        <button {{#if attributes.type}}type="{{attributes.type}}"{{/if}} id="{{attributes.id}}" {{#if flowDetails.verb}}({{flowDetails.verb}})="{{flowDetails.flowName}}()"{{/if}} class="{{cssClass}}">{{content}}</button>&nbsp;&nbsp;
+        {{/ifEquals}}
+    </div>{{/if}}
 </form>
