Fixed logo redirect issue

--- a/application/clients/desktop/src/app/navigation/header/header.component.html
+++ b/application/clients/desktop/src/app/navigation/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary" class="desktop_only">
-    <div>
+    <div class="headerLogo" [routerLink]="['/project']" >
         <img src="../../../assets/img/GeppettoSoftware.png" />
     </div>
 
