--- a/application/clients/desktop/src/app/project-component/entitypopup-model/entitypop-up/entitypop-up.component.html
+++ b/application/clients/desktop/src/app/project-component/entitypopup-model/entitypop-up/entitypop-up.component.html
@@ -5,13 +5,13 @@
         <mat-form-field>
             <input matInput [(ngModel)]="modelObject.name">
         </mat-form-field>
-        <p>Description</p>
+        <p>Description </p>
         <mat-form-field>
             <input matInput [(ngModel)]="modelObject.description">
         </mat-form-field>
         <br />
         <mat-radio-group [(ngModel)]="modelObject.entityType" #radioGroup="matRadioGroup">
-            <mat-radio-button [disabled]="isPrimaryEntityPresent" value="primary">Primary</mat-radio-button>
+            <mat-radio-button [disabled]="isPrimaryEntityPresent"  value="primary" >Primary</mat-radio-button>
             &nbsp;&nbsp;
         
             <mat-radio-button value="secondary">Secondary</mat-radio-button>
@@ -53,5 +53,6 @@
 <div class="center_align">
     <button *ngIf='hide' class="right_align" mat-raised-button color="warn" (click)="onNoClick()">Cancel</button>
     <button *ngIf='!hide' class="right_align" mat-raised-button color="warn" (click)="showOptions()">Back</button>
-    <button mat-raised-button color="primary" [disabled]="hide || (existing && rowData.length == 0)" [mat-dialog-close]="modelObject">Add</button>
+    <button *ngIf="create" mat-raised-button color="primary" [disabled]="hide" [mat-dialog-close]="modelObject">Add</button>
+   <button *ngIf="existing" mat-raised-button color="primary" [disabled]="hide || (rowData.length == 0 || selectedentity.length == 0)" [mat-dialog-close]="modelObject">Add</button>
 </div>
