--- a/generator/services/aws-deployment-manager/templates/github_actions/ec2_instance_deployment.handlebars
+++ b/generator/services/aws-deployment-manager/templates/github_actions/ec2_instance_deployment.handlebars
@@ -4,14 +4,21 @@ on:
     branches: 
       - master
       - geppetto
+      - main
   pull_request:
     branches: 
       - master
       - geppetto
+      - main
 env:
+  AWS_ACCOUNT_ID: ${{#surroundWithCurlyBraces 'secrets.ACCOUNT_NO' }}{{/surroundWithCurlyBraces}}
+  AWS_ROLE_FOR_FARGATE: ${{#surroundWithCurlyBraces ' secrets.AWS_ROLE_FOR_FARGATE '}}{{/surroundWithCurlyBraces}}
   AWS_ACCESS_KEY_ID: ${{#surroundWithCurlyBraces ' secrets.AWS_ACCESS_KEY_ID '}}{{/surroundWithCurlyBraces}}
   AWS_SECRET_ACCESS_KEY: ${{#surroundWithCurlyBraces ' secrets.AWS_SECRET_ACCESS_KEY '}}{{/surroundWithCurlyBraces}}
   AWS_REGION: ${{#surroundWithCurlyBraces ' secrets.AWS_REGION '}}{{/surroundWithCurlyBraces}}
+  AWS_ECS_CLUSTER_NAME: ${{#surroundWithCurlyBraces ' secrets.AWS_ECS_CLUSTER_NAME '}}{{/surroundWithCurlyBraces}}
+  PROJECT_NAME: {{s3_bucket_name}}
+  AWS_S3_BUCKET_NAME: {{s3_bucket_name}}
 
 jobs:
   Prerequisites:
@@ -21,10 +28,101 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{#surroundWithCurlyBraces ' env.AWS_ACCESS_KEY_ID '}}{{/surroundWithCurlyBraces}}
-          aws-secret-access-key: ${{#surroundWithCurlyBraces ' env.AWS_ACCESS_KEY_ID '}}{{/surroundWithCurlyBraces}}
-          aws-region: ${{#surroundWithCurlyBraces ' env.AWS_ACCESS_KEY_ID '}}{{/surroundWithCurlyBraces}}
+          aws-secret-access-key: ${{#surroundWithCurlyBraces ' env.AWS_SECRET_ACCESS_KEY '}}{{/surroundWithCurlyBraces}}
+          aws-region: ${{#surroundWithCurlyBraces ' env.AWS_REGION '}}{{/surroundWithCurlyBraces}}
       - name: Creating the S3 bucket
-        run: aws s3api create-bucket --bucket {{s3_bucket_name}} --region us-east-1
+        run: aws s3api create-bucket --bucket ${{#surroundWithCurlyBraces 'env.AWS_S3_BUCKET_NAME'}}{{/surroundWithCurlyBraces}} --region us-east-1
+      - name: Creating the aws ECR for each micro service
+        run: |
+          aws ecr create-repository --repository-name geppetto-generatedcode-{{project_name}}-{{project_unique_id}}-apigateway  --image-scanning-configuration scanOnPush=true  --region us-east-1
+          aws ecr create-repository --repository-name geppetto-generatedcode-{{project_name}}-{{project_unique_id}}-authproxy  --image-scanning-configuration scanOnPush=true  --region us-east-1
+          aws ecr create-repository --repository-name geppetto-generatedcode-{{project_name}}-{{project_unique_id}}-camunda  --image-scanning-configuration scanOnPush=true  --region us-east-1
+          aws ecr create-repository --repository-name geppetto-generatedcode-{{project_name}}-{{project_unique_id}}-securitymanager  --image-scanning-configuration scanOnPush=true  --region us-east-1
+          {{#each custom_features}}
+          aws ecr create-repository --repository-name geppetto-generatedcode-{{../project_name}}-{{../project_unique_id}}-{{this.name}}  --image-scanning-configuration scanOnPush=true  --region us-east-1
+          {{/each}}
+  Build_and_upload_docker_iamges_to_ECR:
+    needs: Prerequisites
+    runs-on: ubuntu-latest
+    steps:
+      - name: Configure the aws cli
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{#surroundWithCurlyBraces ' env.AWS_ACCESS_KEY_ID '}}{{/surroundWithCurlyBraces}}
+          aws-secret-access-key: ${{#surroundWithCurlyBraces ' env.AWS_SECRET_ACCESS_KEY '}}{{/surroundWithCurlyBraces}}
+          aws-region: ${{#surroundWithCurlyBraces ' env.AWS_REGION '}}{{/surroundWithCurlyBraces}}
+      - name: Checkout_Repo
+        uses: actions/checkout@v2
+      - name: Login to AWS ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+      - name: Build, tag, and push image to Amazon ECR
+        env:
+          ECR_REGISTRY: ${{#surroundWithCurlyBraces ' steps.login-ecr.outputs.registry '}}{{/surroundWithCurlyBraces}}
+          IMAGE_TAG: 1
+        run: |
+     
+          cd application/services/default_services/authproxy
+          docker build -t $ECR_REGISTRY/geppetto-generatedcode-{{project_name}}-{{project_unique_id}}-authproxy:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/geppetto-generatedcode-{{project_name}}-{{project_unique_id}}-authproxy:$IMAGE_TAG
+          echo "Successfully build the docker image for authproxy  and pushed to aws ecr"
+
+          cd ../camunda
+          docker build -t $ECR_REGISTRY/geppetto-generatedcode-{{project_name}}-{{project_unique_id}}-camunda:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/geppetto-generatedcode-{{project_name}}-{{project_unique_id}}-camunda:$IMAGE_TAG
+          echo "Successfully build the docker image for camunda  and pushed to aws ecr"
+
+          cd ../securitymanager
+          docker build -t $ECR_REGISTRY/geppetto-generatedcode-{{project_name}}-{{project_unique_id}}-securitymanager:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/geppetto-generatedcode-{{project_name}}-{{project_unique_id}}-securitymanager:$IMAGE_TAG
+          echo "Successfully build the  docker image for securitymanager and pushed to aws ecr"
+
+          cd ../../custom_services/apigateway
+          docker build -t $ECR_REGISTRY/geppetto-generatedcode-{{project_name}}-{{project_unique_id}}-apigateway:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/geppetto-generatedcode-{{project_name}}-{{project_unique_id}}-apigateway:$IMAGE_TAG
+          echo "Successfully build the docker image for apigateway and pushed to aws ecr"
+
+          {{#each custom_features}}
+          cd ../{{this.name}}
+          docker build -t $ECR_REGISTRY/geppetto-generatedcode-{{../project_name}}-{{../project_unique_id}}-{{this.name}}:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/geppetto-generatedcode-{{../project_name}}-{{../project_unique_id}}-{{this.name}}:$IMAGE_TAG
+          echo "Successfully build the docker image for {{this.name}} and pushed to aws ecr"
+          {{/each}}
+     
+  Deploy_backend:
+    needs: Build_and_upload_docker_iamges_to_ECR
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check the  branch
+        uses: actions/checkout@v2
+      - name: Installing the Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 10
+      - name: Convert the task_defination.ts to json
+        working-directory: .github/workflows
+        run: |
+          AWS_ACCOUNT_ID="${{#surroundWithCurlyBraces 'env.AWS_ACCOUNT_ID'}}{{/surroundWithCurlyBraces}}" AWS_ROLE_FOR_FARGATE="${{#surroundWithCurlyBraces 'env.AWS_ROLE_FOR_FARGATE'}}{{/surroundWithCurlyBraces}}" node task-definition.ts >> task-definition.json
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{#surroundWithCurlyBraces ' env.AWS_ACCESS_KEY_ID '}}{{/surroundWithCurlyBraces}}
+          aws-secret-access-key: ${{#surroundWithCurlyBraces ' env.AWS_SECRET_ACCESS_KEY '}}{{/surroundWithCurlyBraces}}
+          aws-region: ${{#surroundWithCurlyBraces ' env.AWS_REGION '}}{{/surroundWithCurlyBraces}}
+      - name: Fill in the new image ID in the Amazon ECS task definition
+        id: task-def
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition: .github/workflows/task-definition.json
+          container-name: mongo-{{project_unique_id}}
+          image: geppettotest/mongo-local:april2020
+      - name: Deploy Amazon ECS task definition
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ${{#surroundWithCurlyBraces 'steps.task-def.outputs.task-definition' }}{{/surroundWithCurlyBraces}}
+          cluster: ${{#surroundWithCurlyBraces ' env.AWS_ECS_CLUSTER_NAME '}}{{/surroundWithCurlyBraces}}
+          wait-for-service-stability: true
+
   Upload_S3_Bucket:
     needs: Prerequisites
     runs-on: ubuntu-latest
@@ -39,17 +137,19 @@ jobs:
         run: npm install -g @angular/cli
       - name: Installing the node modules
         working-directory: ./application/client/desktop/{{project_name}}
-        run: npm install
+        run: |
+          npm install
+          npm i @ng-select/ng-select
       - name: Production build
+        working-directory: ./application/client/desktop/{{project_name}}
         run: ng build --configuration=production
       - uses: jakejarvis/s3-sync-action@v0.5.1
         with:
           args: --acl public-read --delete
         env:
-          AWS_S3_BUCKET: {{s3_bucket_name}}
           AWS_ACCESS_KEY_ID: ${{#surroundWithCurlyBraces ' env.AWS_ACCESS_KEY_ID '}}{{/surroundWithCurlyBraces}}
           AWS_SECRET_ACCESS_KEY: ${{#surroundWithCurlyBraces ' env.AWS_SECRET_ACCESS_KEY '}}{{/surroundWithCurlyBraces}}
           AWS_REGION: ${{#surroundWithCurlyBraces ' env.AWS_REGION '}}{{/surroundWithCurlyBraces}}
           SOURCE_DIR: "application/client/desktop/{{project_name}}/dist/{{project_name}}"
       - name: Enable the static webhosting
-        run: aws s3 website s3://{{s3_bucket_name}}/ --index-document index.html --error-document error.html
+        run: aws s3 website s3://${{#surroundWithCurlyBraces  'env.AWS_S3_BUCKET_NAME' }}{{/surroundWithCurlyBraces}}/ --index-document index.html --error-document error.html
