--- a/generator/services/Angular-gen-ManagerV10/templates/module.handlebars
+++ b/generator/services/Angular-gen-ManagerV10/templates/module.handlebars
@@ -1,6 +1,7 @@
 import { NgModule } from '@angular/core';
 import { CommonModule } from '@angular/common';
 import { RouterModule } from '@angular/router';
+import { NgSelectModule } from '@ng-select/ng-select';
 {{#each GpHeaders}}
 import { {{importName}} } from '{{ importPath }}';
 {{/each}}
@@ -9,6 +10,7 @@ import { {{importName}} } from '{{ importPath }}';
     imports: [
         CommonModule,
         RouterModule,
+        NgSelectModule,
         {{#each GpOptions.modules}}
         {{name}},
         {{/each}}
