communication frontend to backend is added

--- a/generator/services/aws-deployment-manager/templates/github_actions/github_action_readme.handlebars
+++ b/generator/services/aws-deployment-manager/templates/github_actions/github_action_readme.handlebars
@@ -1,4 +1,4 @@
-# Deploy the your {{s3_bucket_name}} applicaton by using github actions
+# Deploy your {{s3_bucket_name}} applicaton by using github actions
 ![Github Actions](https://readmegeppetto.s3.amazonaws.com/githubactions.jpeg)
 
 ### Deploy the your generated application in aws by using github actions.
