--- a/generator/services/aws-deployment-manager/templates/github_actions/ec2_instance_deployment.handlebars
+++ b/generator/services/aws-deployment-manager/templates/github_actions/ec2_instance_deployment.handlebars
@@ -94,6 +94,8 @@ jobs:
   Deploy_backend:
     needs: Build_and_upload_docker_iamges_to_ECR
     runs-on: ubuntu-latest
+    outputs:
+        public_ip: ${{#surroundWithCurlyBraces ' steps.networkInterfaceId.outputs.PUBLIC_IP_ADDRESS '}}{{/surroundWithCurlyBraces}}
     steps:
       - name: Check the  branch
         uses: actions/checkout@v2
@@ -125,8 +127,12 @@ jobs:
           cluster: ${{#surroundWithCurlyBraces ' env.AWS_ECS_CLUSTER_NAME '}}{{/surroundWithCurlyBraces}}
           wait-for-service-stability: true
       - name: Run the ECS task definition
-        run: aws ecs run-task --cluster ${{#surroundWithCurlyBraces ' env.AWS_ECS_CLUSTER_NAME '}}{{/surroundWithCurlyBraces}}  --task-definition {{project_name}} --launch-type FARGATE --network-configuration "awsvpcConfiguration={subnets=[${{#surroundWithCurlyBraces ' env.AWS_VPC_SUBNET '}}{{/surroundWithCurlyBraces}}],securityGroups=[${{#surroundWithCurlyBraces ' env.AWS_VPC_SECURITY_GROUP '}}{{/surroundWithCurlyBraces}}],assignPublicIp=ENABLED}"
-
+        id: networkInterfaceId
+        run: |
+          run_task=$(aws ecs run-task --cluster ${{#surroundWithCurlyBraces ' env.AWS_ECS_CLUSTER_NAME '}}{{/surroundWithCurlyBraces}}  --task-definition {{project_name}} --launch-type FARGATE --network-configuration "awsvpcConfiguration={subnets=[${{#surroundWithCurlyBraces ' env.AWS_VPC_SUBNET '}}{{/surroundWithCurlyBraces}}],securityGroups=[${{#surroundWithCurlyBraces ' env.AWS_VPC_SECURITY_GROUP '}}{{/surroundWithCurlyBraces}}],assignPublicIp=ENABLED}" | jq  -r '.tasks[].taskArn')
+          sleep 20s
+          echo "::set-output name=NETWORK_ID::$(aws ecs describe-tasks --cluster ${{#surroundWithCurlyBraces ' env.AWS_ECS_CLUSTER_NAME '}}{{/surroundWithCurlyBraces}} --tasks $run_task | jq '.tasks[].attachments[].details[1].value')"
+          echo "::set-output name=PUBLIC_IP_ADDRESS::$(aws ec2 describe-network-interfaces --network-interface-ids ${{#surroundWithCurlyBraces ' steps.networkInterfaceId.outputs.NETWORK_ID '}}{{/surroundWithCurlyBraces}}  | jq -r '.NetworkInterfaces[].PrivateIpAddresses[].Association.PublicIp')"
   Upload_S3_Bucket:
     needs: Deploy_backend
     runs-on: ubuntu-latest
@@ -144,6 +150,11 @@ jobs:
         run: |
           npm install
           npm i @ng-select/ng-select
+      - name: Link the backend apigateway
+        working-directory: ./application/client/desktop/{{project_name}}/src/environments
+        run: |
+          rm -rf environment.prod.ts
+          echo 'export const environment = { DESKTOP_API: `http://${{#surroundWithCurlyBraces ' needs.Deploy_backend.outputs.public_ip '}}{{/surroundWithCurlyBraces}}:8000/desktop`, MOBILE_API: `http://<Your Domain Name or Live IP address>`, production: true };' >> environment.prod.ts
       - name: Production build
         working-directory: ./application/client/desktop/{{project_name}}
         run: ng build --configuration=production
