--- a/generator/services/aws-deployment-manager/templates/github_actions/task_defination.handlebars
+++ b/generator/services/aws-deployment-manager/templates/github_actions/task_defination.handlebars
@@ -264,7 +264,7 @@ module.exports = {
                 }
             ],
             "environmentFiles": null,
-            "environment": [{"name":"MONGO_DB_URL","value":"mongodb://admin:password@127.0.0.1:27017/{{project_name}}_{{project_unique_id}}?authSource=admin"},{"name":"CAMUNDAPOD_URL","value":"http://127.0.0.1:8080"},{"name":"SECURITYURL","value":"http://127.0.0.1:8003"},{"name":"AUTHPROXYURL","value":"http://127.0.0.1:8001"},{"name":"ADMINURL","value":"http://127.0.0.1:8004"},{"name":"CAMUNDAURL","value":"http://127.0.0.1:8002"},{"name":"APIGATEWAY","value":"http://127.0.0.1:8000"}],
+            "environment": [{"name":"MONGO_DB_URL","value":"mongodb://admin:password@127.0.0.1:27017/{{../project_name}}_{{../project_unique_id}}?authSource=admin"}],
             "secrets": null,
             "mountPoints": [],
             "volumesFrom": null,
@@ -275,7 +275,7 @@ module.exports = {
             "logConfiguration": {
                 "logDriver": "awslogs",
                 "options": {
-                    "awslogs-group": "/ecs/{{project_name}}",
+                    "awslogs-group": "/ecs/{{../project_name}}",
                     "awslogs-region": "us-east-1",
                     "awslogs-stream-prefix": "ecs",
                     "awslogs-create-group": "true"
