Added the API's for modify template

--- a/application/clients/desktop/src/app/project-component/project-component.component.html
+++ b/application/clients/desktop/src/app/project-component/project-component.component.html
@@ -189,6 +189,7 @@
             <!-- </mat-expansion-panel> -->
             <app-techarchitecture-manager></app-techarchitecture-manager>
             <app-menu-builder></app-menu-builder>
+            <app-template-manager [projectId]="project_id"> </app-template-manager>
         </mat-accordion>
     </div>
 </div>
