--- a/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.html
+++ b/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.html
@@ -112,14 +112,17 @@
       <div class="modal-body">
         <div class="form-group row">
           <label for="screen-name" class="col-sm-4 col-form-label">Screen Name</label>
-          <div class="col-sm-8">
+          <div *ngIf="!isTemplateEdit" class="col-sm-8">
             <input type="text" [(ngModel)]="screenName" (ngModelChange)="isScreenNameExist()" class="form-control"
             onkeypress=" return ((event.charCode > 64 && event.charCode < 91) || (event.charCode > 96 && event.charCode < 123) || event.charCode == 8 || (event.charCode >= 48 && event.charCode <= 57))"
               id="screen-name">
             <small *ngIf="screenNameExist" style="font-style: italic;
              color: red;">This screen Name is Exist.</small>
           </div>
-        </div>
+          <div *ngIf="isTemplateEdit" class="col-sm-8">
+            <input type="text" id="template" name="template" class="form-control" [(ngModel)]="templateObj.template_name" disabled="true"/>
+          </div>
+          </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" (click)="closeScreeName()">Close</button>
