--- a/application/clients/desktop/src/assets/css/template/geppettotemplate.css
+++ b/application/clients/desktop/src/assets/css/template/geppettotemplate.css
@@ -1,8 +1,30 @@
+* {
+    box-sizing: border-box;
+}
+
+body{
+    margin-top:0px;
+    margin-right:0px;
+    margin-bottom:0px;
+    margin-left:0px;
+    font-family:"Open Sans", sans-serif;
+    background-image:initial;
+    background-position-x:initial;
+    background-position-y:initial;
+    background-size:initial;
+    background-repeat:initial;
+    background-repeat:initial;
+    background-attachment:initial;
+    background-origin:initial;
+    background-clip:initial;
+    background-color:rgb(255, 255, 255);
+}
+
 .form-control {
     display: block;
     width: 100%;
     height: 34px;
-    padding: 6px 12px;
+    /* padding: 6px 12px; */
     font-size: 14px;
     line-height: 1.42857143;
     color: chartreuse;
@@ -11,6 +33,25 @@
     border: 1px solid #ccc;
     border-radius: 4px;
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+}
+
+.row {
+    display: table;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    width: 100%;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+.cell {
+    width: 33% !important;
+    display: table-cell;
+    height: 75px;
+    margin: 5px !important;
 }
 
 .div {
