--- a/application/clients/desktop/src/app/projects/projects.component.scss
+++ b/application/clients/desktop/src/app/projects/projects.component.scss
@@ -1,3 +1,14 @@
+.responsive-image {
+  width: 100%;
+  height: 100%;
+}
+.height-60 {
+    height: 60px;
+}
+.scroll-v {
+    overflow-y: scroll;
+    height: 350px;
+}
 .row-button {
     float: right;
 }
@@ -100,6 +111,12 @@
 
 .sitecard__overlay-icon {
     font-size: .75rem
+}
+
+.sitecard-template {
+    @extend .sitecard__overlay;
+    line-height: 0px !important;
+    padding: 33px 0px 0px 0px;
 }
 
 .sitecard-status {
