We Connect template added

--- a/application/clients/desktop/src/app/projects/projects.component.html
+++ b/application/clients/desktop/src/app/projects/projects.component.html
@@ -119,8 +119,7 @@
                             </div>
                         </div> -->
                         <div class="col-md-6">
-                            <div class="form-group">
-                                <!-- <label for="select-template">Select Template</label> -->
+                            <div class="form-group pt-1">
                                 <button id="select-template" mat-raised-button color="primary" class="mt-4" (click)="openTemplateModal()">Select Template</button>
                             </div>
                         </div>
