--- a/application/clients/desktop/src/assets/templates/geppetto-template.html
+++ b/application/clients/desktop/src/assets/templates/geppetto-template.html
@@ -291,6 +291,9 @@
             padding-bottom: 10px;
             padding-left: 10px;
         }
+        .size-30 {
+            font-size: 30px !important;
+        }
 
         .sidenav .closebtn {
             color: white;
@@ -374,7 +377,7 @@
     <nav id="template-i090p" class="navbar navbar-inverse">
         <div id="template-iyoc4" class="navbar-header">
             <span onclick="openNav()" id="in2oj" class="">
-                ☰</span>
+                <i class="fa fa-bars" aria-hidden="true"></i></span>
 
             <button type="button" data-toggle="collapse" data-target="#myNavbar" id="template-ioico"
                 class="navbar-toggle">
@@ -403,7 +406,7 @@
         </div>
         <div id="mySidenav" class="sidenav">
             <a [routerLink]="['javascript:void(0)']" onclick="closeNav()" id="template-if7ki" class="closebtn">
-                ×</a>
+                <i class="fa fa-close size-30" aria-hidden="true"></i></a>
 
             <div id="MainMenu" class="">
 
