Added the modifier details in separete table and added micro flow steps into the flow generation

--- a/generator/services/seed/login/login.component.html
+++ b/generator/services/seed/login/login.component.html
@@ -43,7 +43,7 @@
             </div>
 
             <div class="rigister">
-              <p class="center signup-text-color">{{'source.plsLogin' | i18next}}? <a
+              <p class="center signup-text-color">{{'source.plsLogin' | i18next}} <a
                   routerLink="/signup">{{'source.signup' | i18next}}</a></p>
             </div>
           </form>
